<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarContato">

    <TextView
        android:id="@+id/titulo_telefone_cadastro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/titulo_telefone_cadastro"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/telefone_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_cadastro" />

    <TextView
        android:id="@+id/titulo_nome_cadastro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/titulo_nome_cadastro"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nome_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/telefone_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/b_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_telefone_cadastro" />

    <EditText
        android:id="@+id/nome_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/titulo_telefone_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_nome_cadastro" />

    <Button
        android:id="@+id/b_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="273dp"
        android:text="@string/botao_cadastrar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/telefone_cadastro"
        app:layout_constraintTop_toBottomOf="@+id/telefone_cadastro" />
</android.support.constraint.ConstraintLayout>